--- a/animal3D SDK/project/VisualStudio/animal3D-DemoPlugin/animal3D-DemoPlugin.vcxproj.filters
+++ b/animal3D SDK/project/VisualStudio/animal3D-DemoPlugin/animal3D-DemoPlugin.vcxproj.filters
@@ -82,6 +82,15 @@
     <Filter Include="Source Files\common\A3_DEMO\a3_DemoMode0_Intro">
       <UniqueIdentifier>{659f3cdc-34ef-43d7-b075-563437b21415}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\common\A3_DEMO\a3_DemoMode1_PostProc">
+      <UniqueIdentifier>{535ceb39-6b96-435d-80f1-ba792e2e0152}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\A3_DEMO\glsl\4x\fs\01-pipeline">
+      <UniqueIdentifier>{81ed0ea3-42b4-491c-a1aa-6c6d712f0d6f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\A3_DEMO\glsl\4x\vs\01-pipeline">
+      <UniqueIdentifier>{619e5605-751b-423c-8dcc-11dd46336862}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="_src_win\main_dll.c">
@@ -129,6 +138,21 @@
     <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode0_Intro\a3_DemoMode0_Intro-unload.c">
       <Filter>Source Files\common\A3_DEMO\a3_DemoMode0_Intro</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc\a3_DemoMode1_PostProc-idle-input.c">
+      <Filter>Source Files\common\A3_DEMO\a3_DemoMode1_PostProc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc\a3_DemoMode1_PostProc-idle-render.c">
+      <Filter>Source Files\common\A3_DEMO\a3_DemoMode1_PostProc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc\a3_DemoMode1_PostProc-idle-update.c">
+      <Filter>Source Files\common\A3_DEMO\a3_DemoMode1_PostProc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc\a3_DemoMode1_PostProc-load.c">
+      <Filter>Source Files\common\A3_DEMO\a3_DemoMode1_PostProc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc\a3_DemoMode1_PostProc-unload.c">
+      <Filter>Source Files\common\A3_DEMO\a3_DemoMode1_PostProc</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoState.h">
@@ -153,6 +177,9 @@
       <Filter>Header Files\A3_DEMO\_animation</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode0_Intro.h">
+      <Filter>Header Files\A3_DEMO</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\a3_DemoMode1_PostProc.h">
       <Filter>Header Files\A3_DEMO</Filter>
     </ClInclude>
   </ItemGroup>
@@ -216,6 +243,24 @@
     </None>
     <None Include="..\..\..\source\animal3D-DemoPlugin\A3_DEMO\_animation\_inl\a3_Hierarchy.inl">
       <Filter>Header Files\A3_DEMO\_animation\_inl</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\vs\01-pipeline\passTangentBasis_shadowCoord_transform_instanced_vs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\vs\01-pipeline</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\vs\01-pipeline\passTangentBasis_shadowCoord_transform_vs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\vs\01-pipeline</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\fs\01-pipeline\drawPhong_shadow_fs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\fs\01-pipeline</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\fs\01-pipeline\postBlend_fs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\fs\01-pipeline</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\fs\01-pipeline\postBlur_fs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\fs\01-pipeline</Filter>
+    </None>
+    <None Include="..\..\..\resource\glsl\4x\fs\01-pipeline\postBright_fs4x.glsl">
+      <Filter>Resource Files\A3_DEMO\glsl\4x\fs\01-pipeline</Filter>
     </None>
   </ItemGroup>
 </Project>
